# Geometry-Processing-Pipeline

./: .gitignore  .gitmodules  AbstractStage.cpp  BooleanOperation.cpp  CLAParser.cpp  CMakeLists.txt  GUIEntry.cpp  Geometry.cpp  GeometryHelpers.cpp  GeometryProcessor.cpp  GeometryViewer.cpp  PointCloud.cpp  PointCloudMatrixAdaptor.cpp  ProcessVisualizer.cpp  README.md
include/: AbstractStage.h  BooleanOperation.h  CLAParser.h  GUIEntry.h  Geometry.h  GeometryHelpers.h  GeometryProcessor.h  GeometryViewer.h  PointCloud.h  PointCloudHelpers.h  PointCloudMatrixAdaptor.h  ProcessVisualizer.h  macros.h
tests/: CMakeLists.txt  TestBooleanOperations.cpp  TestPointCloudHelpers.cpp  TestPointCloudMatrixAdaptor.cpp  run_GPP_tests.cpp
